k8s/frontend-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: frontend
  labels:
    app: frontend
    tier: frontend
spec:
  serviceName: "frontend"
  replicas: 2
  selector:
    matchLabels:
      app: frontend
      tier: frontend
  template:
    metadata:
      labels:
        app: frontend
        tier: frontend
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: frontend
        image: ${DOCKER_REGISTRY}/fs1-mern-frontend:${IMAGE_TAG}
        ports:
        - containerPort: 80
          name: http
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 20
        resources:
          limits:
            cpu: "0.3"
            memory: "256Mi"
          requests:
            cpu: "0.1"
            memory: "128Mi"
  updateStrategy:
    type: RollingUpdate
